--- a/src/TimeSeries.Api/appsettings.json
+++ b/src/TimeSeries.Api/appsettings.json
@@ -13,12 +13,12 @@
     "MinCalculatorSvcUri": "http://localhost:5003/api/mincalc"
   },
   "MessageBusSettings": {
-    "Host": "rabbitmq://localhost/timeseries-eventbus-host",
-    "UserName": "dataaggregator",
-    "Password": "dataaggregator"
+    "Host": "rabbitmq://localhost/timeseries-datastore-host",
+    "UserName": "timeseries",
+    "Password": "timeseries"
   },
   "DataStoreSettings": {
     "Type": "SqlLite",
-    "ConnectionString": "D:/Temp/Timescale.db"
+    "ConnectionString": "D:/timeseries-dbs/Timeseries.db"
   }
 }
