--- a/src/TimeSeries.Calculator.Min/appsettings.json
+++ b/src/TimeSeries.Calculator.Min/appsettings.json
@@ -14,10 +14,10 @@
   },
   "DataStoreSettings": {
     "Type": "SqlLite",
-    "ConnectionString": "D:/Temp/Timescale-Min.db"
+    "ConnectionString": "D:/timeseries-dbs/Timeseries-Min.db"
   },
   "MessageBusSettings": {
-    "Host": "rabbitmq://localhost/timeseries-eventbus-host",
+    "Host": "rabbitmq://localhost/timeseries-datastore-host",
     "UserName": "timeseries",
     "Password": "timeseries"
   }
