--- a/src/TimeSeries.Calculator.Avg/appsettings.json
+++ b/src/TimeSeries.Calculator.Avg/appsettings.json
@@ -14,11 +14,11 @@
   },
   "DataStoreSettings": {
     "Type": "SqlLite",
-    "ConnectionString": "D:/Temp/Timescale-Avg.db"
+    "ConnectionString": "D:/timeseries-dbs/Timeseries-Avg.db"
   },
   "MessageBusSettings": {
-    "Host": "rabbitmq://localhost/timeseries-eventbus-host",
-    "UserName": "dataaggregator",
-    "Password": "dataaggregator"
+    "Host": "rabbitmq://localhost/timeseries-datastore-host",
+    "UserName": "timeseries",
+    "Password": "timeseries"
   }
 }
