--- a/core/TimeSeries.Realtime.DataStream/TimeSeries.Realtime.DataStream.csproj
+++ b/core/TimeSeries.Realtime.DataStream/TimeSeries.Realtime.DataStream.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
+    <PackageReference Include="MassTransit" Version="7.2.1" />
     <PackageReference Include="Autofac" Version="6.2.0" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
