--- a/src/TimeSeries.DataIngestor/TimeSeries.DataIngestor.csproj
+++ b/src/TimeSeries.DataIngestor/TimeSeries.DataIngestor.csproj
@@ -13,6 +13,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+		<PackageReference Include="AutoMapper" Version="10.1.1" />
 		<PackageReference Include="MassTransit" Version="7.2.1" />
 		<PackageReference Include="MassTransit.Autofac" Version="7.2.1" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="7.2.1" />
