--- a/src/TimeSeries.Api/Properties/launchSettings.json
+++ b/src/TimeSeries.Api/Properties/launchSettings.json
@@ -17,6 +17,12 @@
       },
       "dotnetRunMessages": "true",
       "applicationUrl": "https://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
